--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
     "framer-motion": "^12.23.24",
-    "react": "^19.2.0"
+    "react": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
